gccida/g2/bitmap_set_bit
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_set_bit/src/bitmap.c:926:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_set_bit/src/bitmap.c:926:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/bitmap_set_bit/src/obj/bitmap.o] Error 1
